--- a/docker/compose/docker-compose.ui.yml
+++ b/docker/compose/docker-compose.ui.yml
@@ -5,22 +5,23 @@ services:
     ports:
     - "${CLUEDIN_UI_LOCALPORT:-9080}:8080"
     environment:
-    - REACT_APP_UI_APP=http://app.${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT:-9080}
+    - REACT_APP_UI_APP=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://app.${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT_HTTPS:-${CLUEDIN_UI_LOCALPORT-9080}}
     - REACT_APP_UI_APP_SUBDOMAIN=app
     - REACT_APP_UI_BUCKET=/public/img/providers/
     - REACT_APP_UI_CDN_URL=/
     - REACT_APP_UI_CLUEDIN_APP_DOMAIN=${CLUEDIN_DOMAIN}
     - REACT_APP_UI_CLUEDIN_FEATURES=${CLUEDIN_UI_FEATURES_ANNOTATION};${CLUEDIN_UI_FEATURES_CONNECTOR};${CLUEDIN_UI_FEATURES_DATAGOVERNANCE};${CLUEDIN_UI_FEATURES_DATASOURCE};${CLUEDIN_UI_FEATURES_DEDUPLICATIONPROJECTS};${CLUEDIN_UI_FEATURES_DEVELOPER};${CLUEDIN_UI_FEATURES_ENDPOINT};${CLUEDIN_UI_FEATURES_ENGINEROOM};${CLUEDIN_UI_FEATURES_ENRICHER};${CLUEDIN_UI_FEATURES_EXTENDEDSAR};${CLUEDIN_UI_FEATURES_FOLLOW};${CLUEDIN_UI_FEATURES_GLOSSARY};${CLUEDIN_UI_FEATURES_INTEGRATIONS};${CLUEDIN_UI_FEATURES_METRICS};${CLUEDIN_UI_FEATURES_OPENREFINE};${CLUEDIN_UI_FEATURES_PREPARATION};${CLUEDIN_UI_FEATURES_ROLES};${CLUEDIN_UI_FEATURES_SAVEDSEARCHES};${CLUEDIN_UI_FEATURES_SETTINGS};${CLUEDIN_UI_FEATURES_STREAM_MONITORING};${CLUEDIN_UI_FEATURES_STREAMS};${CLUEDIN_UI_FEATURES_USERS};${CLUEDIN_UI_FEATURES_EXPLAINLOG}
-    - REACT_APP_UI_CLUEDIN_CLEAN_URL=http://${CLUEDIN_DOMAIN}:${CLUEDIN_OPENREFINE_LOCALPORT:-3333}/
-    - REACT_APP_UI_GQL_URL=http://${CLUEDIN_DOMAIN}:${CLUEDIN_GQL_LOCALPORT:-8888}/
+    - REACT_APP_UI_CLUEDIN_CLEAN_URL=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://${CLUEDIN_UI_LOCALPORT_HTTPS:+clean.}${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT_HTTPS:-${CLUEDIN_OPENREFINE_LOCALPORT:-3333}}/
+    - REACT_APP_UI_GQL_URL=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT_HTTPS:-${CLUEDIN_GQL_LOCALPORT:-8888}}
+    - REACT_APP_UI_INGEST_URL=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://${CLUEDIN_DOMAIN}:${CLUEDIN_DATASOURCEPROCESSING_LOCALPORT:-5757}
     - REACT_APP_UI_INTERNAL_GQL_URL=${CLUEDIN_UI_ALT_UPLOAD:-http://gql:8888}
     - REACT_APP_UI_COOKIE_DOMAIN_NAME=${CLUEDIN_DOMAIN}
     - REACT_APP_UI_ENV=production
-    - REACT_APP_UI_MAIN_DOMAIN=${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT:-9080}
-    - REACT_APP_UI_PROTOCOL=http://
+    - REACT_APP_UI_MAIN_DOMAIN=${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT_HTTPS:-${CLUEDIN_UI_LOCALPORT:-9080}}
+    - REACT_APP_UI_PROTOCOL=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://
     - REACT_APP_UI_UPLOAD_LIMIT=${CLUEDIN_UI_UPLOAD_LIMIT:-1gb}
     - REACT_APP_UI_CLUEDIN_PUBLICAPI_URL=http://localhost:9007
-    - REACT_APP_UI_CLUEDIN_COPILOTHUB_URL=http://localhost:9000/hub/copilot
+    - REACT_APP_UI_CLUEDIN_COPILOTHUB_URL=http${CLUEDIN_UI_LOCALPORT_HTTPS:+s}://${CLUEDIN_DOMAIN}:${CLUEDIN_UI_LOCALPORT_HTTPS:-9000}/hub/copilot
     depends_on:
       server:
         condition: service_healthy
@@ -35,6 +36,7 @@ services:
         - "AUTH_API=http://${CLUEDIN_SERVER_HOST:-server}:9001/"
         - "WEB_API=http://${CLUEDIN_SERVER_HOST:-server}:9000/"
         - "MICRO_DATASOURCE_URL=http://${CLUEDIN_DATASOURCE_HOST:-datasource}:${CLUEDIN_DATASOURCE_PORT:-9011}"
+        - "MICRO_DATASOURCE_PROCESSING_URL=http://${CLUEDIN_DATASOURCE_PROCESSING_HOST:-datasource-processing}:${CLUEDIN_DATASOURCEPROCESSING_LOCALPORT:-5757}"
         - "MICRO_SUBMITTER_URL=http://${CLUEDIN_DATASOURCESUBMITTER_HOST:-datasource-submitter}:${CLUEDIN_DATASOURCESUBMITTER_PORT:-9012}"
         - "MICRO_DOCUMENTATION_URL=http://${CLUEDIN_DOCUMENTATION_HOST:-documentation}:${CLUEDIN_DOCUMENTATION_PORT:-8888}"
         - "PUBLIC_API=http://${CLUEDIN_SERVER_HOST:-server}:9007/"
