--- a/env/default/.env
+++ b/env/default/.env
@@ -9,6 +9,7 @@ CLUEDIN_CONTAINER_REGISTRY=
 CLUEDIN_COMMON_RESTART_POLICY=
 CLUEDIN_DATASOURCE_DBNAME=
 CLUEDIN_DATASOURCE_HOST=
+CLUEDIN_DATASOURCE_PROCESSING_HOST=
 CLUEDIN_DATASOURCE_LOCALPORT=
 CLUEDIN_DATASOURCE_PORT=
 CLUEDIN_DATASOURCE_TAG=latest
@@ -111,5 +112,6 @@ CLUEDIN_UI_FEATURES_STREAM_MONITORING=streamMonitoring
 CLUEDIN_UI_FEATURES_STREAMS=streams;stream
 CLUEDIN_UI_FEATURES_USERS=users
 CLUEDIN_UI_LOCALPORT=9080
+CLUEDIN_UI_LOCALPORT_HTTPS=
 CLUEDIN_UI_TAG=latest
 CLUEDIN_UI_UPLOAD_LIMIT=1gb
